--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Resources/Areas/Administration/Views/Categories/Index.cs.resx
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Resources/Areas/Administration/Views/Categories/Index.cs.resx
@@ -117,52 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Are you sure you wish to delete" xml:space="preserve">
-    <value>Opravdu chcete smazat</value>
+  <data name="Actions" xml:space="preserve">
+    <value>Možnosti</value>
   </data>
-  <data name="CommentText" xml:space="preserve">
-    <value>Text komentáře</value>
+  <data name="Category information" xml:space="preserve">
+    <value>Informace o kategorii</value>
   </data>
-  <data name="Create an Account" xml:space="preserve">
-    <value>Vytvořit nový účet</value>
+  <data name="Created" xml:space="preserve">
+    <value>Vytvořeno</value>
   </data>
-  <data name="EmailAddress" xml:space="preserve">
-    <value>Emailová adresa</value>
+  <data name="Creator" xml:space="preserve">
+    <value>Vytvořil</value>
   </data>
-  <data name="FirstName" xml:space="preserve">
-    <value>Jméno</value>
+  <data name="Edit" xml:space="preserve">
+    <value>Upravit</value>
   </data>
-  <data name="LastName" xml:space="preserve">
-    <value>Příjmení</value>
+  <data name="Name" xml:space="preserve">
+    <value>Název</value>
   </data>
-  <data name="Login" xml:space="preserve">
-    <value>Přihlásit se</value>
+  <data name="Other users' categories" xml:space="preserve">
+    <value>Kategorie ostatních uživatelů</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Heslo</value>
+  <data name="Tooltip" xml:space="preserve">
+    <value>Popis</value>
   </data>
-  <data name="Posted on" xml:space="preserve">
-    <value>Zveřejněno:</value>
-  </data>
-  <data name="Register" xml:space="preserve">
-    <value>Registrovat</value>
-  </data>
-  <data name="RepeatPassword" xml:space="preserve">
-    <value>Zopakovat Heslo</value>
-  </data>
-  <data name="Save" xml:space="preserve">
-    <value>Uložit</value>
-  </data>
-  <data name="Text" xml:space="preserve">
-    <value>Text</value>
-  </data>
-  <data name="TheEmailFieldIsRequired" xml:space="preserve">
-    <value>E-mailová adresa je povinná.</value>
-  </data>
-  <data name="ThePasswordFieldIsRequired" xml:space="preserve">
-    <value>Heslo je povinné.</value>
-  </data>
-  <data name="Validation_Required" xml:space="preserve">
-    <value>'{0}' je povinný.</value>
+  <data name="Your categories" xml:space="preserve">
+    <value>Vaše kategorie</value>
   </data>
 </root>
